# memcards

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 0001_init.sql
src/: config.rs  errors.rs  import.rs  main.rs  models.rs  router.rs  routes.rs  sdk.rs  srs.rs  templates.rs
src/routes/: deck.rs  flashcard.rs
src/sdk/: app_session.rs  auth.rs  event_manager.rs  events.rs  layout_manager.rs  location_manager.rs
templates/: base.html  deck.html  deck_import.html  decks.html  flashcard.html  flashcard_list.html  flashcards.html  styles.css  webview.html
